test/files/neg/t2910.check
t2910.scala:3: error: forward reference extends over definition of value ret
    val ret = l.map({ case MyMatch(id) => id })
                           ^
t2910.scala:9: error: forward reference extends over definition of value z
    println(s.length)
            ^
t2910.scala:16: error: forward reference extends over definition of value z
      x
      ^
t2910.scala:30: error: forward reference extends over definition of value x
    lazy val f: Int = x
                      ^
<<<<<<< HEAD
t2910.scala:34: error: forward reference extends over definition of variable x
=======
t2910.scala:35: error: forward reference extends over definition of variable x
>>>>>>> 426c65030df3df0c3e038931b64199fc4e83c1a0
    lazy val f: Int = g
                      ^
5 errors found
